Fixes AB#778: Button tooltips not visible on keyboard focus

--- a/src/@batch-flask/ui/buttons/button.scss
+++ b/src/@batch-flask/ui/buttons/button.scss
@@ -173,6 +173,10 @@ bl-button {
     }
 }
 
+.btn-tooltip {
+    font-size: 11px !important
+}
+
 @media (forced-colors: active) {
     bl-button {
         border: 1px solid currentColor;
